[package]
authors = ["Jason Cheung <jckaichu@gmail.com>"]
edition = "2018"
name = "give_the_project_the_name"
version = "0.1.0"
[[bin]]
name = "word_count"
path = "src/old_main.rs"

[[bin]]
name = "app"
path = "src/app_main.rs"

[dependencies]
actix-rt = "*"
actix-web = "2.0"
postgres = "0.17.2"
proptest = "*"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "*"
